# haskell-aoc-2022

./: .gitignore  CHANGELOG.md  README.md  haskell-aoc2022.cabal
app/: Main.hs
lib/: DayFive.hs  DayFour.hs  DayOne.hs  DaySix.hs  DayThree.hs  DayTwo.hs
test/: LibTests.hs
