cabal-version:      3.6
name:               haskell-aoc2022
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hydrostatik
maintainer:         40757442+Hydrostatik@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        DayOne,
        DayTwo,
        DayThree,
        DayFour
    build-depends:    
        base ^>=4.16.2.0,
        text ^>=1.2.5.0
    hs-source-dirs:     lib
    default-language:   Haskell2010
    default-extensions: OverloadedStrings

executable haskell-aoc2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.2.0,
        text ^>=1.2.5.0,
        haskell-aoc2022
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: OverloadedStrings

test-suite lib-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          LibTests.hs
    build-depends:    
        base ^>=4.16.2.0,
        text ^>=1.2.5.0,
        hspec ^>=2.10.6,
        haskell-aoc2022
    default-extensions: OverloadedStrings